--- a/.htaccess
+++ b/.htaccess
@@ -107,7 +107,7 @@ DirectoryIndex index.php
   # RewriteBase /
 
   RewriteCond %{REQUEST_URI} ^/solr/select(\?.+)? [NC]
-  RewriteRule ^/solr/select(.*)$ /cgi-bin/solr_search_proxy.py$1 [L,QSA]
+  RewriteRule ^solr/select(.*)$ /cgi-bin/solr_search_proxy.py$1 [L,QSA]
 
   # Rewrite URLs of the form 'x' to the form 'index.php?q=x'.
   RewriteCond %{REQUEST_FILENAME} !-f
