--- a/.htaccess
+++ b/.htaccess
@@ -107,7 +107,7 @@ DirectoryIndex index.php
   # RewriteBase /
 
   # Intercept calls to Apache Solr on any port for which Apache is listening
-  RewriteCond %{REQUEST_METHOD} ^(GET|HEAD) [NC]
+  RewriteCond %{REQUEST_METHOD} ^(GET|HEAD|POST) [NC]
   RewriteCond %{REQUEST_URI} ^/solr/[a-z]+ [NC]
   RewriteRule ^solr/select(.*)$ /cgi-bin/solr_search_proxy.py$1 [L,QSA]
   RewriteRule ^solr/update(.*)$ /cgi-bin/solr_update_proxy.py$1 [L,QSA]
