--- a/.htaccess
+++ b/.htaccess
@@ -80,6 +80,10 @@ DirectoryIndex index.html index.php
 <IfModule mod_rewrite.c>
   RewriteEngine on
 
+  # Rewrite signpost.kendra.org.uk to live.signpost.kendra.org.uk
+  RewriteCond %{HTTP_HOST} ^signpost\.kendra\.org\.uk$ [NC]
+  RewriteRule ^(.*)$ http://live.signpost.kendra.org.uk/$1 [L,R=301]
+
   # If your site can be accessed both with and without the 'www.' prefix, you
   # can use one of the following settings to redirect users to your preferred
   # URL, either WITH or WITHOUT the 'www.' prefix. Choose ONLY one option:
