--- a/.htaccess
+++ b/.htaccess
@@ -113,12 +113,12 @@ DirectoryIndex index.html index.php
   # Intercept calls to Apache Solr on any port for which Apache is listening
   RewriteCond %{REQUEST_METHOD} ^(GET|HEAD|POST) [NC]
   RewriteCond %{REQUEST_URI} ^/solr/[a-z]+ [NC]
-  RewriteRule ^solr/select(.*)$ /cgi-bin/solr_search_proxy.py$1 [L,QSA]
-  RewriteRule ^solr/update(.*)$ /cgi-bin/solr_update_proxy.py$1 [L,QSA]
-  RewriteRule ^solr/admin/ping$ /cgi-bin/solr_ping_proxy.py [L,QSA]
+  RewriteRule ^solr/[a-z]+/select(.*)$ /cgi-bin/solr_search_proxy.py$1 [L,QSA]
+  RewriteRule ^solr/[a-z]+/update(.*)$ /cgi-bin/solr_update_proxy.py$1 [L,QSA]
+  RewriteRule ^solr/[a-z]+/admin/ping$ /cgi-bin/solr_ping_proxy.py [L,QSA]
 
   # TEST RULE -- intercept all /solr/ requests
-  RewriteRule ^solr/[a-z]+ /cgi-bin/solr_ping_proxy.py [L,QSA]
+  RewriteRule ^solr/[a-z]+/[a-z]+ /cgi-bin/solr_ping_proxy.py [L,QSA]
 
   # Rewrite URLs of the form 'x' to the form 'index.php?q=x'.
   RewriteCond %{REQUEST_FILENAME} !-f
